commit desde el server

--- a/DICOM_filter/config.sample.ini
+++ b/DICOM_filter/config.sample.ini
@@ -66,10 +66,10 @@ format_2 = .dcm
 format_3 = .dat
 
 [ARCHIVE]
-health_curated_path = /alpacs_data/curated/
-health_inbound_path = /alpacs_data/inbound/
-health_processed_path = /alpacs_data/processed/
-health_stashed_path = /alpacs_data/stashed/
+health_curated_path = /health/curated/
+health_inbound_path = /health/inbound/
+health_processed_path = /health/processed/
+health_stashed_path = /health/stashed/
 
 # Url a la cual se envian los datos extraidos, solo si extract esta habilitado
 [API]
